Create function `findFile`

--- a/bin/build
+++ b/bin/build
@@ -29,11 +29,17 @@ ARCH=os.linux.x86_64
 echo "Demeteorizing application for Meteor v$METEOR_VERSION"
 demeteorizer --output $OUTPUT_DIR --architecture $ARCH
 
-# Recursively search input directory for a package.json
-PACKAGE_PATH=$(find $OUTPUT_DIR -name package.json ! -path "*/node_modules/*"  ! -path ".git/*"  | \
+# Searches a directory top-down looking for a file.
+findFile() {
+  find $2 -name $1 ! -path "*/node_modules/*" ! -path ".git/*" | \
   awk -F'/' '{print $0 "," NF-1}' | \
-  sort -t, -nk2 | awk -F',' '{print $1}' | \
-  head -n 1)
+  sort -t, -nk2 | \
+  awk -F',' '{print $1}' | \
+  head -n 1
+}
+
+# Recursively search input directory for a package.json
+PACKAGE_PATH=$(findFile "package.json" $OUTPUT_DIR)
 
 if [[ $PACKAGE_PATH ]]; then
   printf "Package found: ${PACKAGE_PATH/$OUTPUT_DIR/}\n"
