Remove arch flag on demeteorizer output

--- a/bin/build
+++ b/bin/build
@@ -20,14 +20,11 @@ NVM_DIR=$HOME/.nvm
 source /opt/nvm/nvm.sh
 
 # Demeteorizer flags
-ARCH=os.linux.x86_64
-
-# Turn Meteor app into a Node.js app
 # TODO Test for demeteorizer flags
 # --json || --debug
 
 cd $INPUT_DIR
-demeteorizer --output $OUTPUT_DIR --architecture $ARCH
+demeteorizer --output $OUTPUT_DIR
 
 # Searches a directory top-down looking for a file.
 findFile() {
