--- a/bin/build
+++ b/bin/build
@@ -2,11 +2,9 @@
 set -e
 
 # Uncomment the following line while debugging
-# set -x
+set -x
 
 CURRENT_DIR=$(pwd)
-NODE_VERSION=0.10.41
-NPM_VERSION=3.8.6
 
 if [[ ! $INPUT_DIR ]] || [[ ! $OUTPUT_DIR ]]; then
   printf "Input/Output directory variables must be set.\n"
@@ -26,14 +24,17 @@ if [[ ! -d $INPUT_DIR/.meteor ]]; then
   exit 1
 fi
 
-NVM_DIR=$HOME/.nvm
+# Setup nvm
+# NVM_DIR=/opt/home/.nvm
+NVM_DIR=$OUTPUT_DIR/.modulus/nvm
 source /opt/nvm/nvm.sh
 
-printf "Installing node $NODE_VERSION\n"
-nvm install $NODE_VERSION > /dev/null 2>&1
+if [[ ! -d $NVM_DIR ]]; then
+  mkdir -p $NVM_DIR
+fi
 
-printf "Installing npm $NPM_VERSION\n"
-npm install npm@$NPM_VERSION --global > /dev/null 2>&1
+cp -R /opt/nvm/* $NVM_DIR
+nvm use deploy
 
 # Copy Meteor distribution to $HOME
 printf "Initializing Meteor environment.\n"
@@ -68,7 +69,7 @@ findFile() {
 }
 
 # Recursively search input directory for a package.json
-PACKAGE_PATH=$(findFile "package.json" $OUTPUT_DIR)
+PACKAGE_PATH=$(findFile "package.json" $OUTPUT_DIR/bundle)
 
 if [[ $PACKAGE_PATH ]]; then
   printf "Package found: ${PACKAGE_PATH/$OUTPUT_DIR/}\n"
@@ -81,9 +82,8 @@ if [[ $PACKAGE_PATH ]]; then
   npm-install
 fi
 
-MOD_DIR=$OUTPUT_DIR/.modulus
-mkdir -p $MOD_DIR
+# MOD_DIR=$OUTPUT_DIR/.modulus
+# mkdir -p $MOD_DIR
 
-# bundle nvm with output
-nvm alias deploy $(nvm current)
-cp -R $NVM_DIR/. $MOD_DIR/nvm
+# # bundle nvm with output
+# cp -R $NVM_DIR/. $MOD_DIR/nvm
