--- a/bin/build
+++ b/bin/build
@@ -2,6 +2,8 @@
 set -e
 
 CURRENT_DIR=$(pwd)
+COMMAND=''
+DEFAULT_COMMAND=$(demeteorizer --server-only --output $OUTPUT_DIR)
 
 if [[ ! $INPUT_DIR ]] || [[ ! $OUTPUT_DIR ]]; then
   printf "Input/Output directory variables must be set.\n"
@@ -37,9 +39,17 @@ nvm use deploy
 printf "Initializing Meteor environment.\n"
 cp -R /opt/home/.meteor $HOME
 
-# Demeteorizer flags
-# TODO Test for demeteorizer flags
-# --json || --debug
+if [[ $JSON ]] && [[ $DEBUG ]]; then
+  $COMMAND=$(demeteorizer --server-only --output $OUTPUT_DIR --json $(cat $JSON) --debug)
+elif [[ $JSON ]] || [[ $DEBUG ]]; then
+  if [[ $JSON ]]; then
+    $COMMAND=$(demeteorizer --server-only --output $OUTPUT_DIR --json $(cat $JSON))
+  elif [[ $DEBUG ]]; then
+    $COMMAND=$(demeteorizer --server-only --output $OUTPUT_DIR --debug)
+  fi
+else
+  $COMMAND=$DEFAULT_COMMAND
+fi
 
 cd $INPUT_DIR
 METEOR_VERSION=$(cat $INPUT_DIR/.meteor/release)
@@ -50,7 +60,8 @@ if [[ -f $INPUT_DIR/package.json ]]; then
   npm install --production
 fi
 
-demeteorizer --server-only --output $OUTPUT_DIR
+printf "Demeteorizer command: '$(COMMAND)'.\n"
+$COMMAND
 
 if [[ -d $INPUT_DIR/node_modules ]]; then
   mv $INPUT_DIR/node_modules $OUTPUT_DIR
